feat: init homepage dihadiri

--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-    "name": "@rac/frontend-monorepo",
+    "name": "@raizora/wadah-depan-web",
+    "author": "engineering@raizora.com",
     "private": true,
     "scripts": {
-        "dev:erp": "pnpm --filter @rac/erp dev",
-        "dev:zycas": "pnpm --filter @rac/zycas dev",
-        "dev:zycas-compro": "pnpm --filter @rac/zycas-compro dev",
-        "build:erp": "pnpm --filter @rac/erp build",
-        "build:zycas": "pnpm --filter @rac/zycas build",
-        "build:zycas-compro": "pnpm --filter @rac/zycas-compro build",
+        "dev:lp-dihadiri": "pnpm --filter @raizora/lp-dihadiri dev",
+        "dev:lp-himajin": "pnpm --filter @raizora/lp-himajin dev",
+        "dev:lp-ketuju": "pnpm --filter @raizora/lp-ketuju dev",
+        "dev:lp-tempat-teduh": "pnpm --filter @raizora/lp-tempat-teduh dev",
+        "dev:lp-raizora": "pnpm --filter @raizora/lp-raizora dev",
+        "dev:lp-gea-tourism": "pnpm --filter @raizora/lp-gea-tourism dev",
+        "dev:ds-himajin": "pnpm --filter @raizora/ds-himajin dev",
+        "build:lp-dihadiri": "pnpm --filter @raizora/lp-dihadiri build",
+        "build:lp-himajin": "pnpm --filter @raizora/lp-himajin build",
+        "build:lp-ketuju": "pnpm --filter @raizora/lp-ketuju build",
+        "build:lp-tempat-teduh": "pnpm --filter @raizora/lp-tempat-teduh build",
+        "build:lp-raizora": "pnpm --filter @raizora/lp-raizora build",
+        "build:lp-gea-tourism": "pnpm --filter @raizora/lp-gea-tourism build",
+        "build:ds-himajin": "pnpm --filter @raizora/ds-himajin build",
         "build": "pnpm --filter [nama-project] build",
         "start": "pnpm --filter [nama-project] start",
         "lint": "pnpm --filter [nama-project] lint"
