--- a/apps/lp-dihadiri/package.json
+++ b/apps/lp-dihadiri/package.json
@@ -1,41 +1,62 @@
 {
-  "name": "@raizora/lp-dihadiri",
-  "version": "0.1.0",
-  "author": "engineering@raizora.com",
-  "license": "MIT",
-  "scripts": {
-    "build": "astro build",
-    "dev": "astro dev",
-    "format": "prettier -w .",
-    "preview": "astro preview",
-    "start": "astro dev"
-  },
-  "dependencies": {
-    "@astrojs/react": "^4.0.0",
-    "@astrojs/tailwind": "^5.1.3",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "astro": "^5.0.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.469.0",
-    "react": "catalog:",
-    "react-dom": "catalog:",
-    "sharp": "^0.33.5",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "catalog:",
-    "tailwindcss-animate": "catalog:",
-    "@packages/astro-ui": "workspace:^",
-    "@packages/tailwind-config": "workspace:^"
-  },
-  "devDependencies": {
-    "@types/node": "^22.10.1",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
-    "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "typescript": "^5.7.2"
-  },
-  "packageManager": "pnpm@9.15.0"
+    "name": "@raizora/lp-dihadiri",
+    "version": "1.0.0",
+    "private": false,
+    "license": "MIT",
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
+        "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.10.0",
+        "@packages/ui": "workspace:*",
+        "@tabler/icons-react": "catalog:",
+        "@tanstack/react-table": "^8.20.6",
+        "@types/unist": "^3.0.3",
+        "@vercel/analytics": "^1.4.1",
+        "class-variance-authority": "catalog:",
+        "clsx": "catalog:",
+        "cmdk": "catalog:",
+        "contentlayer": "^0.3.4",
+        "date-fns": "^4.1.0",
+        "jotai": "^2.11.3",
+        "lucide-react": "^0.475.0",
+        "next": "catalog:",
+        "next-themes": "catalog:",
+        "react": "catalog:",
+        "react-dom": "catalog:",
+        "schema-dts": "^1.1.2",
+        "tailwind-merge": "catalog:",
+        "tailwindcss": "catalog:",
+        "vaul": "^1.1.2",
+        "zod": "^3.24.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.20.0",
+        "@faker-js/faker": "^9.4.0",
+        "@next/bundle-analyzer": "15.1.6",
+        "@next/eslint-plugin-next": "15.1.6",
+        "@tailwindcss/postcss": "^4.0.5",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@types/node": "^22.13.1",
+        "@types/react": "catalog:",
+        "@types/react-dom": "catalog:",
+        "eslint": "^9.20.0",
+        "eslint-config-next": "15.1.6",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-promise": "^7.2.1",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-tailwindcss": "^3.18.0",
+        "globals": "^15.14.0",
+        "postcss": "catalog:",
+        "prettier": "catalog:",
+        "prettier-plugin-tailwindcss": "catalog:",
+        "typescript": "catalog:",
+        "typescript-eslint": "^8.23.0"
+    }
 }
