init landing pages ketuju

--- a/apps/lp-ketuju/package.json
+++ b/apps/lp-ketuju/package.json
@@ -14,32 +14,26 @@
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
         "@packages/ui": "workspace:*",
-        "@tanstack/react-query": "catalog:",
-        "@tanstack/react-query-devtools": "catalog:",
-        "@tanstack/react-table": "catalog:",
+        "@tabler/icons-react": "catalog:",
+        "@tanstack/react-table": "^8.20.6",
         "@types/unist": "^3.0.3",
         "@vercel/analytics": "^1.4.1",
         "class-variance-authority": "catalog:",
         "clsx": "catalog:",
         "cmdk": "catalog:",
         "contentlayer": "^0.3.4",
-        "cookies-next": "catalog:",
         "date-fns": "^4.1.0",
-        "framer-motion": "^11.12.0",
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
-        "motion": "^12.4.2",
         "next": "catalog:",
-        "next-auth": "catalog:",
-        "next-safe-action": "catalog:",
         "next-themes": "catalog:",
         "react": "catalog:",
         "react-dom": "catalog:",
+        "schema-dts": "^1.1.2",
         "tailwind-merge": "catalog:",
         "tailwindcss": "catalog:",
         "vaul": "^1.1.2",
-        "zod": "^3.24.1",
-        "zustand": "^5.0.3"
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.20.0",
@@ -51,7 +45,6 @@
         "@types/node": "^22.13.1",
         "@types/react": "catalog:",
         "@types/react-dom": "catalog:",
-        "@types/tailwindcss": "^3.1.0",
         "eslint": "^9.20.0",
         "eslint-config-next": "15.1.6",
         "eslint-config-prettier": "^10.0.1",
