--- a/apps/lp-ketuju/tsconfig.json
+++ b/apps/lp-ketuju/tsconfig.json
@@ -22,6 +22,9 @@
             }
         ],
         "paths": {
+            "@packages/*": [
+                "../../packages/*"
+            ],
             "@/*": [
                 "./src/*"
             ]
@@ -33,7 +36,7 @@
         "**/*.ts",
         "**/*.tsx",
         ".next/types/**/*.ts"
-, "tailwind.config.mts", "tailwind.config.mts", "tailwind-shared.mts"    ],
+    ],
     "exclude": [
         "node_modules"
     ]
