--- a/apps/lp-raizora/package.json
+++ b/apps/lp-raizora/package.json
@@ -27,6 +27,7 @@
         "framer-motion": "^11.12.0",
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
+        "motion": "^12.4.3",
         "nanoid": "^5.1.0",
         "next": "catalog:",
         "next-sitemap": "^4.2.3",
