--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -13,6 +13,9 @@
       "ui/hooks/*": [
         "./hooks/*"
       ],
+      "lib/*": [
+        "src/lib/*"
+      ],
       "@/*": [
         "./src/*"
       ]
@@ -20,7 +23,9 @@
   },
   "include": [
     "**/*.tsx",
-    "**/*.ts"
+    "**/*.ts",
+    "**/**/*.tsx",
+    "src/lib/utils.js",
   ],
   "exclude": [
     "node_modules",
