feat: implement custom fonts

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -95,7 +95,8 @@
         "@radix-ui/react-visually-hidden": "^1.1.0",
         "add": "^2.0.6",
         "autoprefixer": "^10.4.20",
-        "framer-motion": "^11.12.0",
+        "framer-motion": "catalog:",
+        "motion": "catalog:",
         "pnpm": "^9.14.2",
         "postcss": "catalog:",
         "tailwindcss-animate": "^1.0.7",
