--- a/apps/lp-raizora/package.json
+++ b/apps/lp-raizora/package.json
@@ -24,10 +24,10 @@
         "contentlayer": "^0.3.4",
         "date-fns": "^4.1.0",
         "deepmerge": "^4.3.1",
-        "framer-motion": "^11.12.0",
+        "framer-motion": "catalog:",
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
-        "motion": "^12.4.3",
+        "motion": "catalog:",
         "nanoid": "^5.1.0",
         "next": "catalog:",
         "next-sitemap": "^4.2.3",
