--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -39,4 +39,6 @@ catalog:
   "@tanstack/react-query": "^5.66.0"
   "@tanstack/react-table": "^8.20.6"
   "@tanstack/react-query-devtools": "^5.66.0"
+  "motion": "^12.4.3"
+  "framer-motion": "^11.12.0"
 
