feat: lp dihadiri

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -30,7 +30,7 @@
         "./*"
       ],
       "ui/components/ui/*": [
-        "src/components/ui/*"
+        "src/components/base/*"
       ],
       "ui/hooks/*": [
         "./hooks/*"
