chore: centralize nextjs config

--- a/apps/lp-raizora/package.json
+++ b/apps/lp-raizora/package.json
@@ -57,6 +57,7 @@
         "@types/node": "^22.13.1",
         "@types/react": "catalog:",
         "@types/react-dom": "catalog:",
+        "@tooling/nextjs-config": "workspace:*",
         "eslint": "^9.20.0",
         "eslint-config-next": "15.1.6",
         "eslint-config-prettier": "^10.0.1",
