--- a/apps/lp-gea-tourism/package.json
+++ b/apps/lp-gea-tourism/package.json
@@ -39,6 +39,7 @@
     },
     "devDependencies": {
         "@tooling/typescript-config": "workspace:*",
+        "@tooling/nextjs-config": "workspace:*",
         "@eslint/js": "^9.20.0",
         "@faker-js/faker": "^9.4.0",
         "@next/bundle-analyzer": "15.1.6",
