--- a/apps/ds-raizora/package.json
+++ b/apps/ds-raizora/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@raizora/ds-himajin",
+    "name": "@raizora/ds-raizora",
     "version": "0.1.0",
     "private": false,
     "license": "MIT",
@@ -9,7 +9,8 @@
         "start": "next start",
         "lint": "next lint",
         "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
-        "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+        "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+        "gen:open-api": "openapi-zod-client './schemas/open-api.json' -o './__generated__/zodios-client.ts'"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
@@ -40,6 +41,7 @@
     },
     "devDependencies": {
         "@tooling/typescript-config": "workspace:*",
+        "@tooling/nextjs-config": "workspace:*",
         "@eslint/js": "^9.20.0",
         "@faker-js/faker": "^9.4.0",
         "@next/bundle-analyzer": "15.1.6",
