--- a/apps/lp-gea-tourism/package.json
+++ b/apps/lp-gea-tourism/package.json
@@ -35,7 +35,37 @@
         "tailwind-merge": "catalog:",
         "tailwindcss": "catalog:",
         "vaul": "^1.1.2",
-        "zod": "^3.24.1"
+        "zod": "^3.24.1",
+        "@clerk/nextjs": "^5.3.3",
+        "@radix-ui/react-checkbox": "^1.1.1",
+        "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.1",
+        "@radix-ui/react-scroll-area": "^1.1.0",
+        "@radix-ui/react-select": "^2.1.1",
+        "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slider": "^1.2.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.1",
+        "@radix-ui/react-toggle": "^1.1.0",
+        "@radix-ui/react-toggle-group": "^1.1.0",
+        "@stripe/react-stripe-js": "^2.8.0",
+        "@stripe/stripe-js": "^4.4.0",
+        "@vercel/postgres": "^0.5.1",
+        "bcrypt": "^5.1.1",
+        "date-fns": "^2.30.0",
+        "embla-carousel-react": "^8.2.0",
+        "eslint": "^8.57.0",
+        "leaflet": "^1.9.4",
+        "next-cloudinary": "^5.20.0",
+        "react-day-picker": "^8.10.1",
+        "react-hook-form": "^7.53.0",
+        "react-leaflet": "^4.2.1",
+        "sharp": "^0.32.6",
+        "stripe": "^16.9.0",
+        "tailwindcss-animate": "^1.0.7",
+        "typescript": "5.2.2"
     },
     "devDependencies": {
         "@tooling/typescript-config": "workspace:*",
@@ -61,6 +91,14 @@
         "prettier": "catalog:",
         "prettier-plugin-tailwindcss": "catalog:",
         "typescript": "catalog:",
-        "typescript-eslint": "^8.23.0"
+        "typescript-eslint": "^8.23.0",
+        "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+        "@types/bcrypt": "^5.0.2",
+        "@types/leaflet": "^1.9.12",
+        "@typescript-eslint/parser": "^8.3.0",
+        "autoprefixer": "^10.4.20",
+        "dotenv": "^16.4.5",
+        "tailwindcss": "^3.4.10",
+        "tsx": "^4.19.0"
     }
 }
