--- a/apps/lp-gea-tourism/package.json
+++ b/apps/lp-gea-tourism/package.json
@@ -12,31 +12,10 @@
         "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
     },
     "dependencies": {
+        "@clerk/nextjs": "^5.3.3",
         "@hookform/resolvers": "^3.10.0",
         "@next/third-parties": "catalog:",
         "@packages/ui": "workspace:*",
-        "@tabler/icons-react": "catalog:",
-        "@tanstack/react-table": "^8.20.6",
-        "@types/unist": "^3.0.3",
-        "@vercel/analytics": "^1.4.1",
-        "class-variance-authority": "catalog:",
-        "clsx": "catalog:",
-        "cmdk": "catalog:",
-        "contentlayer": "^0.3.4",
-        "google": "link:@next/third-parties/google",
-        "jotai": "^2.11.3",
-        "lucide-react": "^0.475.0",
-        "next": "catalog:",
-        "next-safe-action": "catalog:",
-        "next-themes": "catalog:",
-        "nuqs": "catalog:",
-        "react": "catalog:",
-        "react-dom": "catalog:",
-        "tailwind-merge": "catalog:",
-        "tailwindcss": "catalog:",
-        "vaul": "^1.1.2",
-        "zod": "^3.24.1",
-        "@clerk/nextjs": "^5.3.3",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -52,33 +31,61 @@
         "@radix-ui/react-toggle-group": "^1.1.0",
         "@stripe/react-stripe-js": "^2.8.0",
         "@stripe/stripe-js": "^4.4.0",
+        "@tabler/icons-react": "catalog:",
+        "@tanstack/react-table": "^8.20.6",
+        "@types/unist": "^3.0.3",
+        "@vercel/analytics": "^1.4.1",
         "@vercel/postgres": "^0.5.1",
         "bcrypt": "^5.1.1",
+        "class-variance-authority": "catalog:",
+        "clsx": "catalog:",
+        "cmdk": "catalog:",
+        "contentlayer": "^0.3.4",
         "date-fns": "^2.30.0",
+        "drizzle-orm": "^0.39.3",
         "embla-carousel-react": "^8.2.0",
         "eslint": "^8.57.0",
+        "google": "link:@next/third-parties/google",
+        "jotai": "^2.11.3",
         "leaflet": "^1.9.4",
+        "lucide-react": "^0.475.0",
+        "next": "catalog:",
         "next-cloudinary": "^5.20.0",
+        "next-safe-action": "catalog:",
+        "next-themes": "catalog:",
+        "nuqs": "catalog:",
+        "react": "catalog:",
         "react-day-picker": "^8.10.1",
+        "react-dom": "catalog:",
         "react-hook-form": "^7.53.0",
         "react-leaflet": "^4.2.1",
         "sharp": "^0.32.6",
         "stripe": "^16.9.0",
+        "tailwind-merge": "catalog:",
+        "tailwindcss": "catalog:",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "5.2.2"
+        "typescript": "5.2.2",
+        "vaul": "^1.1.2",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
-        "@tooling/typescript-config": "workspace:*",
-        "@tooling/nextjs-config": "workspace:*",
         "@eslint/js": "^9.20.0",
         "@faker-js/faker": "^9.4.0",
+        "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
         "@next/bundle-analyzer": "15.1.6",
         "@next/eslint-plugin-next": "15.1.6",
         "@tailwindcss/postcss": "^4.0.5",
+        "@tooling/nextjs-config": "workspace:*",
+        "@tooling/typescript-config": "workspace:*",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@types/bcrypt": "^5.0.2",
+        "@types/leaflet": "^1.9.12",
         "@types/node": "^22.13.1",
         "@types/react": "catalog:",
         "@types/react-dom": "catalog:",
+        "@typescript-eslint/parser": "^8.3.0",
+        "autoprefixer": "^10.4.20",
+        "dotenv": "^16.4.5",
         "eslint": "^9.20.0",
         "eslint-config-next": "15.1.6",
         "eslint-config-prettier": "^10.0.1",
@@ -90,15 +97,9 @@
         "postcss": "catalog:",
         "prettier": "catalog:",
         "prettier-plugin-tailwindcss": "catalog:",
-        "typescript": "catalog:",
-        "typescript-eslint": "^8.23.0",
-        "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-        "@types/bcrypt": "^5.0.2",
-        "@types/leaflet": "^1.9.12",
-        "@typescript-eslint/parser": "^8.3.0",
-        "autoprefixer": "^10.4.20",
-        "dotenv": "^16.4.5",
         "tailwindcss": "^3.4.10",
-        "tsx": "^4.19.0"
+        "tsx": "^4.19.0",
+        "typescript": "catalog:",
+        "typescript-eslint": "^8.23.0"
     }
 }
