--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -41,4 +41,5 @@ catalog:
   "@tanstack/react-query-devtools": "^5.66.0"
   "motion": "^12.4.3"
   "framer-motion": "^11.12.0"
+  "firebase": "^11.3.1"
 
