--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,7 @@
         "typescript": "catalog:"
     },
     "dependencies": {
+        "@ark-ui/react": "^4.9.2",
         "@hookform/resolvers": "^3.10.0",
         "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -52,6 +53,7 @@
         "@radix-ui/react-menubar": "^1.1.6",
         "@radix-ui/react-navigation-menu": "^1.2.5",
         "@radix-ui/react-popover": "^1.1.6",
+        "@radix-ui/react-primitive": "^2.0.0",
         "@radix-ui/react-progress": "^1.1.2",
         "@radix-ui/react-radio-group": "^1.2.3",
         "@radix-ui/react-scroll-area": "^1.2.3",
@@ -62,11 +64,16 @@
         "@radix-ui/react-switch": "^1.1.3",
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
+        "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@radix-ui/react-visually-hidden": "^1.1.0",
+        "@tabler/icons-react": "catalog:",
         "@tanstack/react-table": "^8.20.6",
         "@types/unist": "^3.0.3",
         "@vercel/analytics": "^1.4.1",
+        "add": "^2.0.6",
+        "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.4",
@@ -74,11 +81,15 @@
         "date-fns": "^4.1.0",
         "embla-carousel-autoplay": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
+        "framer-motion": "catalog:",
         "input-otp": "^1.4.2",
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
+        "motion": "catalog:",
         "next": "catalog:",
         "next-themes": "^0.4.4",
+        "pnpm": "^9.14.2",
+        "postcss": "catalog:",
         "react": "catalog:",
         "react-day-picker": "^9.5.1",
         "react-dom": "catalog:",
@@ -88,18 +99,8 @@
         "sonner": "^1.7.4",
         "tailwind-merge": "catalog:",
         "tailwindcss": "catalog:",
-        "vaul": "^1.1.2",
-        "zod": "^3.24.1",
-        "@radix-ui/react-primitive": "^2.0.0",
-        "@radix-ui/react-toggle": "^1.1.0",
-        "@radix-ui/react-visually-hidden": "^1.1.0",
-        "add": "^2.0.6",
-        "autoprefixer": "^10.4.20",
-        "framer-motion": "catalog:",
-        "motion": "catalog:",
-        "pnpm": "^9.14.2",
-        "postcss": "catalog:",
         "tailwindcss-animate": "^1.0.7",
-        "@tabler/icons-react": "catalog:"
+        "vaul": "^1.1.2",
+        "zod": "^3.24.1"
     }
 }
