feat: add scroll motion text revealed

--- a/apps/lp-dihadiri/package.json
+++ b/apps/lp-dihadiri/package.json
@@ -23,6 +23,7 @@
         "cmdk": "catalog:",
         "contentlayer": "^0.3.4",
         "date-fns": "^4.1.0",
+        "gsap": "^3.12.7",
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
         "next": "catalog:",
@@ -31,6 +32,7 @@
         "react": "catalog:",
         "react-dom": "catalog:",
         "schema-dts": "^1.1.2",
+        "split-type": "^0.3.4",
         "tailwind-merge": "catalog:",
         "tailwindcss": "catalog:",
         "vaul": "^1.1.2",
@@ -42,6 +44,7 @@
         "@next/bundle-analyzer": "15.1.6",
         "@next/eslint-plugin-next": "15.1.6",
         "@tailwindcss/postcss": "^4.0.5",
+        "@tooling/nextjs-config": "workspace:*",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/node": "^22.13.1",
         "@types/react": "catalog:",
