chore: update script dev and build

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "dev:lp-raizora": "pnpm --filter @raizora/lp-raizora dev",
         "dev:lp-gea-tourism": "pnpm --filter @raizora/lp-gea-tourism dev",
         "dev:ds-himajin": "pnpm --filter @raizora/ds-himajin dev",
+        "dev:lp-klolatoko": "pnpm --filter @raizora/lp-klolatoko dev",
+        "dev:lp-klolakos": "pnpm --filter @raizora/lp-klolakos dev",
+        "dev:lp-klolaform": "pnpm --filter @raizora/lp-klolaform dev",
+        "dev:lp-klolarental": "pnpm --filter @raizora/ds-klolarental dev",
         "build:lp-dihadiri": "pnpm --filter @raizora/lp-dihadiri build",
         "build:lp-himajin": "pnpm --filter @raizora/lp-himajin build",
         "build:lp-ketuju": "pnpm --filter @raizora/lp-ketuju build",
@@ -17,6 +21,10 @@
         "build:lp-raizora": "pnpm --filter @raizora/lp-raizora build",
         "build:lp-gea-tourism": "pnpm --filter @raizora/lp-gea-tourism build",
         "build:ds-himajin": "pnpm --filter @raizora/ds-himajin build",
+        "build:lp-klolatoko": "pnpm --filter @raizora/lp-klolatoko build",
+        "build:lp-klolakos": "pnpm --filter @raizora/lp-klolakos build",
+        "build:lp-klolaform": "pnpm --filter @raizora/lp-klolaform build",
+        "build:lp-klolarental": "pnpm --filter @raizora/ds-klolarental build",
         "build": "pnpm --filter [nama-project] build",
         "start": "pnpm --filter [nama-project] start",
         "lint": "pnpm --filter [nama-project] lint"
