--- a/apps/lp-klolatoko/package.json
+++ b/apps/lp-klolatoko/package.json
@@ -10,15 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.3.0",
-    "@packages/ui": "workspace:",
     "@astrojs/mdx": "^4.0.3",
+    "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
     "@astrolib/seo": "^1.0.0-beta.8",
+    "@packages/ui": "workspace:",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "@tailwindcss/vite": "^4.0.0-beta.8"
+    "@tailwindcss/vite": "^4.0.0-beta.8",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "astro": "^5.3.0",
+    "react": "catalog:",
+    "react-dom": "catalog:"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
