--- a/apps/lp-klolatoko/tsconfig.json
+++ b/apps/lp-klolatoko/tsconfig.json
@@ -14,6 +14,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
