--- a/apps/lp-klolatoko/tsconfig.json
+++ b/apps/lp-klolatoko/tsconfig.json
@@ -13,7 +13,15 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@packages/*": [
+        "../../packages/*"
+      ],
+      "@/*": [
+        "./src/*"
+      ],
+      "@/components/*": [
+        "./src/components/*"
+      ]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
