--- a/apps/ds-raizora/package.json
+++ b/apps/ds-raizora/package.json
@@ -15,16 +15,18 @@
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
         "@next/third-parties": "catalog:",
-        "@packages/ui": "workspace:*",
         "@packages/api-client": "workspace:*",
+        "@packages/ui": "workspace:*",
         "@tabler/icons-react": "catalog:",
         "@tanstack/react-table": "^8.20.6",
         "@types/unist": "^3.0.3",
         "@vercel/analytics": "^1.4.1",
+        "@zodios/core": "^10.9.6",
         "class-variance-authority": "catalog:",
         "clsx": "catalog:",
         "cmdk": "catalog:",
         "contentlayer": "^0.3.4",
+        "firebase": "catalog:",
         "google": "link:@next/third-parties/google",
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
@@ -37,17 +39,16 @@
         "tailwind-merge": "catalog:",
         "tailwindcss": "catalog:",
         "vaul": "^1.1.2",
-        "zod": "^3.24.1",
-        "firebase": "catalog:"
+        "zod": "^3.24.1"
     },
     "devDependencies": {
-        "@tooling/typescript-config": "workspace:*",
-        "@tooling/nextjs-config": "workspace:*",
         "@eslint/js": "^9.20.0",
         "@faker-js/faker": "^9.4.0",
         "@next/bundle-analyzer": "15.1.6",
         "@next/eslint-plugin-next": "15.1.6",
         "@tailwindcss/postcss": "^4.0.5",
+        "@tooling/nextjs-config": "workspace:*",
+        "@tooling/typescript-config": "workspace:*",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/node": "^22.13.1",
         "@types/react": "catalog:",
