--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -84,6 +84,7 @@
         "framer-motion": "catalog:",
         "input-otp": "^1.4.2",
         "jotai": "^2.11.3",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.475.0",
         "motion": "catalog:",
         "next": "catalog:",
@@ -95,6 +96,7 @@
         "react-dom": "catalog:",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
+        "react-select": "^5.10.0",
         "recharts": "^2.15.1",
         "sonner": "^1.7.4",
         "tailwind-merge": "catalog:",
