--- a/apps/ds-raizora/package.json
+++ b/apps/ds-raizora/package.json
@@ -17,6 +17,8 @@
         "@next/third-parties": "catalog:",
         "@packages/api-client": "workspace:*",
         "@packages/ui": "workspace:*",
+        "@refinedev/devtools": "^1.2.12",
+        "@refinedev/nextjs-router": "^6.2.1",
         "@tabler/icons-react": "catalog:",
         "@tanstack/react-table": "^8.20.6",
         "@types/unist": "^3.0.3",
@@ -31,6 +33,7 @@
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
         "next": "catalog:",
+        "next-intl": "^3.26.5",
         "next-safe-action": "catalog:",
         "next-themes": "catalog:",
         "nuqs": "catalog:",
