--- a/apps/lp-himajin/package.json
+++ b/apps/lp-himajin/package.json
@@ -25,8 +25,10 @@
         "date-fns": "^4.1.0",
         "jotai": "^2.11.3",
         "lucide-react": "^0.475.0",
+        "match-sorter": "^8.0.0",
         "next": "catalog:",
         "next-themes": "catalog:",
+        "nuqs": "^2.4.0",
         "react": "catalog:",
         "react-dom": "catalog:",
         "react-wrap-balancer": "^1.1.1",
@@ -42,11 +44,11 @@
         "@next/bundle-analyzer": "15.1.6",
         "@next/eslint-plugin-next": "15.1.6",
         "@tailwindcss/postcss": "^4.0.5",
+        "@tooling/nextjs-config": "workspace:*",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/node": "^22.13.1",
         "@types/react": "catalog:",
         "@types/react-dom": "catalog:",
-        "@tooling/nextjs-config": "workspace:*",
         "eslint": "^9.20.0",
         "eslint-config-next": "15.1.6",
         "eslint-config-prettier": "^10.0.1",
