--- a/apps/lp-himajin/package.json
+++ b/apps/lp-himajin/package.json
@@ -24,6 +24,7 @@
         "contentlayer": "^0.3.4",
         "date-fns": "^4.1.0",
         "jotai": "^2.11.3",
+        "kbar": "0.1.0-beta.45",
         "lucide-react": "^0.475.0",
         "match-sorter": "^8.0.0",
         "next": "catalog:",
