fix: db configuration

--- a/apps/lp-gea-tourism/.env.example
+++ b/apps/lp-gea-tourism/.env.example
@@ -1,15 +1,8 @@
-POSTGRES_URL=""
-POSTGRES_PRISMA_URL=""
-POSTGRES_URL_NO_SSL=""
-POSTGRES_URL_NON_POOLING=""
-POSTGRES_USER=""
-POSTGRES_HOST=""
-POSTGRES_PASSWORD=""
-POSTGRES_DATABASE=""
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=""
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
-CLERK_SECRET_KEY=""
-NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
-NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
-STRIPE_SECRET_KEY=""
+POSTGRES_URL=postgres://default:cxWTv0g8UqlB@ep-black-sky-a47a314r-pooler.us-east-1.aws.neon.tech/verceldb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://default:cxWTv0g8UqlB@ep-black-sky-a47a314r.us-east-1.aws.neon.tech/verceldb?sslmode=require
+POSTGRES_USER=default
+POSTGRES_HOST=ep-black-sky-a47a314r-pooler.us-east-1.aws.neon.tech
+POSTGRES_PASSWORD=cxWTv0g8UqlB
+POSTGRES_DATABASE=verceldb
+POSTGRES_URL_NO_SSL=postgres://default:cxWTv0g8UqlB@ep-black-sky-a47a314r-pooler.us-east-1.aws.neon.tech/verceldb
+POSTGRES_PRISMA_URL=postgres://default:cxWTv0g8UqlB@ep-black-sky-a47a314r-pooler.us-east-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require
