--- a/apps/docs-raizora-care/package.json
+++ b/apps/docs-raizora-care/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@raizora/docs-care",
   "type": "module",
-  "author": "Shu Ding",
+  "author": "raizora@engineering.com",
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
@@ -18,8 +18,8 @@
   "dependencies": {
     "markdown-to-jsx": "^7.4.0",
     "next": "catalog:",
-    "nextra": "^4.2.13",
-    "nextra-theme-docs": "^4.2.13",
+    "nextra": "catalog:",
+    "nextra-theme-docs": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-intersection-observer": "^8.26.2"
@@ -28,7 +28,7 @@
     "@next/bundle-analyzer": "^14.2.13",
     "@tailwindcss/postcss": "^4.0.0-beta.8",
     "pagefind": "^1.3.0",
-    "tailwindcss": "^4.0.0-beta.8"
+    "tailwindcss": "catalog:"
   },
   "browserslist": [
     ">= .25%",
