--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -42,4 +42,6 @@ catalog:
   "motion": "^12.4.3"
   "framer-motion": "^11.12.0"
   "firebase": "^11.3.1"
+  "nextra": "^4.2.13"
+  "nextra-theme-docs": "^4.2.13"
 
