--- a/apps/ds-raizora/package.json
+++ b/apps/ds-raizora/package.json
@@ -43,7 +43,8 @@
         "tailwind-merge": "catalog:",
         "tailwindcss": "catalog:",
         "vaul": "^1.1.2",
-        "zod": "^3.24.1"
+        "zod": "^3.24.1",
+        "@supabase/supabase-js": "catalog:"
     },
     "devDependencies": {
         "@eslint/js": "^9.20.0",
