--- a/apps/docs-raizora-design/package.json
+++ b/apps/docs-raizora-design/package.json
@@ -14,7 +14,8 @@
     "nextra": "catalog:",
     "nextra-theme-docs": "catalog:",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "@packages/ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "catalog:",
