--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -45,4 +45,5 @@ catalog:
   "nextra": "^4.2.13"
   "nextra-theme-docs": "^4.2.13"
   "@supabase/supabase-js": "^2.49.1"
+  "@biomejs/biome": ^1.9.4
 
