--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
         "build": "pnpm --filter [nama-project] build",
         "start": "pnpm --filter [nama-project] start",
         "lint": "pnpm --filter [nama-project] lint",
-        "format": "biome format . --write"
+        "format": "biome format . --write",
+        "update-deps": "npm-check-updates --configFileName .ncurc.json"
     },
     "devDependencies": {
         "@biomejs/biome": "catalog:",
-        "@t3-oss/env-nextjs": "^0.11.1"
+        "@t3-oss/env-nextjs": "^0.12.0",
+        "npm-check-updates": "^17.1.15"
     },
     "dependencies": {
         "@svgr/webpack": "^8.1.0"
     },
-    "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
+    "packageManager": "pnpm@10.6.1"
 }
