--- a/apps/ds-raizora/package.json
+++ b/apps/ds-raizora/package.json
@@ -20,7 +20,9 @@
         "@packages/utils": "workspace:*",
         "@refinedev/devtools": "^1.2.14",
         "@refinedev/nextjs-router": "^6.2.1",
+        "@supabase/supabase-js": "catalog:",
         "@tabler/icons-react": "catalog:",
+        "@tanstack/match-sorter-utils": "^8.19.4",
         "@tanstack/react-table": "^8.21.2",
         "@types/unist": "^3.0.3",
         "@vercel/analytics": "^1.5.0",
@@ -44,8 +46,7 @@
         "tailwind-merge": "catalog:",
         "tailwindcss": "catalog:",
         "vaul": "^1.1.2",
-        "zod": "^3.24.2",
-        "@supabase/supabase-js": "catalog:"
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
