--- a/apps/lp-klolakos/package.json
+++ b/apps/lp-klolakos/package.json
@@ -19,6 +19,7 @@
         "@tanstack/react-table": "^8.21.2",
         "@types/unist": "^3.0.3",
         "@vercel/analytics": "^1.5.0",
+        "dotted-map": "^2.2.3",
         "class-variance-authority": "catalog:",
         "clsx": "catalog:",
         "cmdk": "catalog:",
