--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "module": "esnext",
+    "module": "NodeNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "isolatedModules": true,
