--- a/apps/lp-dihadiri/package.json
+++ b/apps/lp-dihadiri/package.json
@@ -31,6 +31,7 @@
         "next-themes": "catalog:",
         "react": "catalog:",
         "react-dom": "catalog:",
+        "react-use": "^17.6.0",
         "schema-dts": "^1.1.5",
         "split-type": "^0.3.4",
         "tailwind-merge": "catalog:",
