--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,27 @@
         "typescript": "catalog:"
     },
     "dependencies": {
+        "@floating-ui/react-dom": "^2.1.0",
+        "@lexical/list": "0.24.0",
+        "@lexical/markdown": "^0.24.0",
+        "@lexical/react": "0.24.0",
+        "@lexical/rich-text": "0.24.0",
+        "@lexical/selection": "0.24.0",
+        "@lexical/utils": "0.24.0",
+        "@liveblocks/client": "^2.20.0",
+        "@liveblocks/node": "^2.20.0",
+        "@liveblocks/node-lexical": "^2.20.0",
+        "@liveblocks/react": "^2.20.0",
+        "@liveblocks/react-lexical": "^2.20.0",
+        "@liveblocks/react-ui": "^2.20.0",
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "ai": "^3.3.31",
+        "lexical": "0.24.0",
+        "markdown-to-jsx": "^7.5.0",
+        "nanoid": "^3.3.7",
+        "react-textarea-autosize": "^8.5.3",
         "@ark-ui/react": "^5.0.0",
         "@hookform/resolvers": "^4.1.3",
         "@radix-ui/react-accordion": "^1.2.3",
