--- a/.moon/workspace.yaml
+++ b/.moon/workspace.yaml
@@ -4,7 +4,7 @@ $schema: 'https://moonrepo.dev/schemas/workspace.json'
 
 vcs:
   manager: 'git'
-  provider: gitlab
+  provider: github
   defaultBranch: 'main'
   # @see: https://moonrepo.dev/docs/config/workspace#hooks
   hooks:
