--- a/apps/docs-raizora-design/package.json
+++ b/apps/docs-raizora-design/package.json
@@ -16,6 +16,7 @@
     "@packages/theme-switcher": "workspace:*",
     "@packages/shadcn-ui": "workspace:*",
     "@packages/ui": "workspace:*",
+    "@packages/sandbox": "workspace:*",
     "@sentry/nextjs": "^9.3.0",
     "@t3-oss/env-core": "^0.12.0",
     "@t3-oss/env-nextjs": "^0.12.0",
