--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,7 +37,9 @@
         "typescript": "catalog:"
     },
     "dependencies": {
+        "@ark-ui/react": "^5.0.0",
         "@floating-ui/react-dom": "^2.1.0",
+        "@hookform/resolvers": "^4.1.3",
         "@lexical/list": "0.24.0",
         "@lexical/markdown": "^0.24.0",
         "@lexical/react": "0.24.0",
@@ -50,16 +52,6 @@
         "@liveblocks/react": "^2.20.0",
         "@liveblocks/react-lexical": "^2.20.0",
         "@liveblocks/react-ui": "^2.20.0",
-        "@types/node": "^18.11.18",
-        "@types/react": "^18.0.27",
-        "@types/react-dom": "^18.0.10",
-        "ai": "^3.3.31",
-        "lexical": "0.24.0",
-        "markdown-to-jsx": "^7.5.0",
-        "nanoid": "^3.3.7",
-        "react-textarea-autosize": "^8.5.3",
-        "@ark-ui/react": "^5.0.0",
-        "@hookform/resolvers": "^4.1.3",
         "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -91,9 +83,13 @@
         "@radix-ui/react-visually-hidden": "^1.1.2",
         "@tabler/icons-react": "catalog:",
         "@tanstack/react-table": "^8.21.2",
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
         "@types/unist": "^3.0.3",
         "@vercel/analytics": "^1.5.0",
         "add": "^2.0.6",
+        "ai": "^3.3.31",
         "autoprefixer": "^10.4.21",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -105,9 +101,12 @@
         "framer-motion": "catalog:",
         "input-otp": "^1.4.2",
         "jotai": "^2.12.1",
+        "lexical": "0.24.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.479.0",
+        "markdown-to-jsx": "^7.5.0",
         "motion": "catalog:",
+        "nanoid": "^3.3.7",
         "next": "catalog:",
         "next-themes": "^0.4.4",
         "pnpm": "^10.6.1",
@@ -115,9 +114,11 @@
         "react": "catalog:",
         "react-day-picker": "^9.6.1",
         "react-dom": "catalog:",
+        "react-fast-marquee": "^1.6.5",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
         "react-select": "^5.10.1",
+        "react-textarea-autosize": "^8.5.3",
         "recharts": "^2.15.1",
         "sonner": "^2.0.1",
         "tailwind-merge": "catalog:",
