--- a/apps/app-klola/package.json
+++ b/apps/app-klola/package.json
@@ -46,6 +46,7 @@
     "next-safe-action": "catalog:",
     "next-themes": "catalog:",
     "nuqs": "catalog:",
+    "prom-client": "^15.1.3",
     "react": "catalog:",
     "react-dom": "catalog:",
     "schema-dts": "^1.1.5",
