--- a/apps/app-klola/package.json
+++ b/apps/app-klola/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-table": "^8.21.2",
     "@types/unist": "^3.0.3",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/otel": "^1.11.0",
     "@zodios/core": "^10.9.6",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
@@ -46,6 +47,7 @@
     "next-safe-action": "catalog:",
     "next-themes": "catalog:",
     "nuqs": "catalog:",
+    "pino-loki": "^2.5.0",
     "prom-client": "^15.1.3",
     "react": "catalog:",
     "react-dom": "catalog:",
