test: unit testing motion

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -57,7 +57,10 @@
     "jsdom": "^26.1.0",
     "storybook": "^8.6.12",
     "typescript": "catalog:",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "jest": "^29.0.0",
+    "@types/jest": "^29.0.0",
+    "ts-jest": "^29.0.0"
   },
   "dependencies": {
     "@ark-ui/react": "^5.0.0",
